# nd-qalibpipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  report.txt  requirements_dev.txt  setup.cfg
.github/workflows/: ci.yml  lint.yml
data/: README.md  events_data.json
data/gold/: README.md
data/silver/: README.md  catalogue_clean.csv  circulation_clean.csv  events_clean.csv  feedback_summary.csv
docs/: README.md  SECURITY.md  TECHNICAL_DEBT.md
docs/architecture/: README.md  adr.md  design-pipeline.md
notebooks/fabric/: README.md
project/: PROJECT_TASKS.md  TASKS.md
scripts/: README.md  generate_sample_data.py
src/data_processing/: __init__.py  cleaning.py  ingestion.py  run_pipeline.py  validation.py
tests/: __init__.py  test_cleaning.py  test_example.py  test_ingestion.py  test_validation.py
